fixed padding on mobile

--- a/junior-jobs/client/src/App.css
+++ b/junior-jobs/client/src/App.css
@@ -54,6 +54,7 @@
 @media (max-width: 785px) {
     .job {
         width: 70%;
+        margin-bottom: 20px;
     }
 }
 
